Ajustar docker para produção

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,38 +6,32 @@ volumes:
 
 services:
   app:
-    user: ${DOCKER_UID}:${DOCKER_UID}
-    container_name: ${PROJECT_NAME}-app
+    user: ${APP_UID}:${APP_GID}
+    container_name: ${APP_NAME}-app
     image: webdevops/php-nginx:8.1-alpine
     volumes:
       - ./project:/app
     working_dir: /app
     environment:
-      - WEB_DOCUMENT_ROOT=/app/public
-      - PHP_MEMORY_LIMIT=256M
+      - WEB_DOCUMENT_ROOT=${APP_DOCUMENT_ROOT}
+      - PHP_MEMORY_LIMIT=${APP_MEMORY_LIMIT}
       - php.opcache.enable_cli=1
     ports:
-      - 80:80
+      - ${APP_PORT}:80
 
   postgres:
-    container_name: ${PROJECT_NAME}-postgres
+    container_name: ${APP_NAME}-postgres
     image: postgres:15-alpine
     volumes:
       - app-postgres-data:/var/lib/postgresql/data
     environment:
-      - POSTGRES_DB=app_dev
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=laraveldocker
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
     ports:
-      - 5433:5432
+      - ${POSTGRES_PORT}:5432
 
   redis:
-    container_name: ${PROJECT_NAME}-redis
+    container_name: ${APP_NAME}-redis
     image: redis:5.0
     command: --appendonly no
-
-  mailcatcher:
-    container_name: ${PROJECT_NAME}-mailcatcher
-    image: schickling/mailcatcher
-    ports:
-      - 1080:1080
