--- a/environments/local/docker-compose.dev.yml
+++ b/environments/local/docker-compose.dev.yml
@@ -6,3 +6,15 @@ services:
     image: schickling/mailcatcher
     ports:
       - 1080:1080
+
+  test-postgres:
+    container_name: ${APP_NAME}-postgres-test
+    image: postgres:15-alpine
+    volumes:
+      - app-postgres-data:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_DB=${TEST_POSTGRES_DB}
+      - POSTGRES_USER=${TEST_POSTGRES_USER}
+      - POSTGRES_PASSWORD=${TEST_POSTGRES_PASSWORD}
+    ports:
+      - ${TEST_POSTGRES_PORT}:5432
