--- a/project/.env.testing
+++ b/project/.env.testing
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=pgsql
 DB_HOST=test-postgres
 DB_PORT=5432
-DB_DATABASE=app_dev
+DB_DATABASE=app_test
 DB_USERNAME=postgres
 DB_PASSWORD=laraveldocker
 
